--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
